--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const homeBg = backgroundAssets.home;
 		title="Customized Tecnology Solutions to Boost Your Business"
 		description="Innovative technology solutions for the modern world. We create powerful software and systems that drive your business forward."
 		ctaText="Request a free consultation"
-		ctaLink="#services"
+		ctaHref="/contact"
 	/>
 	<Info 
 		title="About Us"
