update styles in contact us page

--- a/src/components/ItemLink.astro
+++ b/src/components/ItemLink.astro
@@ -11,8 +11,8 @@ const refs = [
     { href: '/', label: 'Home' },
     { href: '/about', label: 'About' },
     { href: '/services', label: 'Services' },
-    { href: '/contact', label: 'Contact' }, // ✅ Página informativa
-    { href: '/form', label: 'Get in Touch' } // ✅ Nueva página de formulario de contacto
+    { href: '/contact', label: 'Contact' } // ✅ Página informativa
+   /* { href: '/form', label: 'Get in Free Consultation' } // ✅ Nueva página de formulario de contacto*/
 ];
 
 // ✅ Mapeo correcto sin barras finales innecesarias
