--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ const aboutBg = backgroundAssets.about;
     
     <DynamicBanner 
         pageType="about"
-        title="About Ephemeral"
+        title="About Us"
         description="Passionate developers creating innovative technology solutions since 2017. Discover our journey and expertise."
     />
     
