--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import DynamicBanner from '../components/DynamicBanner.astro';
 import { backgroundAssets } from '../assets';
 
-const contactFormUrl = "/contactform";
+const contactFormUrl = "/form";
 ---
 
 <Layout pageTitle="Contact - Ephemeral" backgroundType="contact">
